# py-vector

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-push
deploy/: Dockerfile  k8s-deployment.yaml
doc/: overview.md
docker/: k8s-deployment.yaml
examples/: improved_endpoints.py
frontend/: index.html
scripts/: start.sh
src/py_rag/: dependencies.py  main.py
src/py_rag/api/v1/: api.py
src/py_rag/api/v1/endpoints/: documents.py  health.py  search.py
src/py_rag/core/: document_processor.py  embedding.py  search_engine.py  vector_store.py
src/py_rag/models/: responses.py
src/py_rag/services/: document_service.py  search_service.py
src/py_rag/utils/: response_helper.py
src/py_vector/: config.py  dependencies.py  main.py
src/py_vector/agent/: rag.py
src/py_vector/agent/models/: rag.py
src/py_vector/agent/tools/: search.py
src/py_vector/api/v1/: api.py  api_routers.py
src/py_vector/api/v1/endpoints/: documents.py  files.py  health.py  rag.py  search.py
src/py_vector/core/: database.py  document_processor.py  embedding.py  faiss_persistence.py  faiss_vector_store.py  file_store.py  milvus_vector_store.py  reranker.py  s3.py  search_engine.py  vector_store.py
src/py_vector/core/chunking/: __init__.py  agent.py  base.py  fixed_size.py  recursive.py  semantic.py  structure.py
src/py_vector/models/: file.py  requests.py  responses.py
src/py_vector/services/: document_service.py  search_service.py
src/py_vector/utils/: response_helper.py
src/py_vector/vector_dbs/: faiss_vector_store.py  milvus_vector_store.py  vector_store.py
src/py_vector/vector_dbs/milvus/: milvus_vector_store.py
tests/: test_document_processor.py  test_document_processor_extract.py
