[project]
name = "py-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.4",
    "chardet>=7.4.3",
    "datetime>=6.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "hatchling>=1.31.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "pathlib>=1.0.1",
    "psutil>=7.2.2",
    "pydantic-settings>=2.10.1",
    "pymilvus>=3.0.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "requests>=2.33.0",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
py-vector = "py_rag.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
